// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`walk > .gitkeep files are not included in the file tree 1`] = `
[
  {
    "children": [],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": "",
    "name": "foo",
    "owner": "root",
    "path": "",
    "permissions": [
      6,
      6,
      4,
    ],
    "size": 0,
  },
]
`;

exports[`walk > .meta files are not included in the file tree 1`] = `
[
  {
    "children": [],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": "",
    "name": "foo",
    "owner": "root",
    "path": "",
    "permissions": [
      6,
      6,
      4,
    ],
    "size": 0,
  },
]
`;

exports[`walk > should return a valid file tree with a default owner/root based on the home directory 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "group": "root",
        "isDirectory": true,
        "lastModifiedTime": "",
        "name": "bar",
        "owner": "root",
        "path": "foo",
        "permissions": [
          6,
          6,
          4,
        ],
        "size": 0,
      },
    ],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": "",
    "name": "foo",
    "owner": "root",
    "path": "",
    "permissions": [
      6,
      6,
      4,
    ],
    "size": 0,
  },
  {
    "children": [
      {
        "children": [
          {
            "children": undefined,
            "group": "bazzing.gaz",
            "isDirectory": false,
            "lastModifiedTime": "",
            "name": "bazzing.gaz",
            "owner": "bazzing.gaz",
            "path": "some/home",
            "permissions": [
              6,
              6,
              4,
            ],
            "size": 0,
          },
          {
            "children": [
              {
                "children": undefined,
                "group": "daz",
                "isDirectory": false,
                "lastModifiedTime": "",
                "name": "test",
                "owner": "daz",
                "path": "some/home/daz",
                "permissions": [
                  6,
                  6,
                  4,
                ],
                "size": 0,
              },
            ],
            "group": "daz",
            "isDirectory": true,
            "lastModifiedTime": "",
            "name": "daz",
            "owner": "daz",
            "path": "some/home",
            "permissions": [
              6,
              6,
              4,
            ],
            "size": 0,
          },
          {
            "children": [
              {
                "children": undefined,
                "group": "gaz",
                "isDirectory": false,
                "lastModifiedTime": "",
                "name": "test",
                "owner": "gaz",
                "path": "some/home/gaz",
                "permissions": [
                  6,
                  6,
                  4,
                ],
                "size": 0,
              },
            ],
            "group": "gaz",
            "isDirectory": true,
            "lastModifiedTime": "",
            "name": "gaz",
            "owner": "gaz",
            "path": "some/home",
            "permissions": [
              6,
              6,
              4,
            ],
            "size": 0,
          },
        ],
        "group": "root",
        "isDirectory": true,
        "lastModifiedTime": "",
        "name": "home",
        "owner": "root",
        "path": "some",
        "permissions": [
          6,
          6,
          4,
        ],
        "size": 0,
      },
    ],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": "",
    "name": "some",
    "owner": "root",
    "path": "",
    "permissions": [
      6,
      6,
      4,
    ],
    "size": 0,
  },
]
`;

exports[`walk > should return a valid file tree with data from a .meta file 1`] = `
[
  {
    "children": [
      {
        "children": undefined,
        "group": "root",
        "isDirectory": false,
        "lastModifiedTime": "",
        "name": "baz.txt",
        "owner": "some value",
        "path": "bar",
        "permissions": [
          4,
          5,
          6,
        ],
        "size": 0,
      },
    ],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": "",
    "name": "bar",
    "owner": "root",
    "path": "",
    "permissions": [
      6,
      6,
      4,
    ],
    "size": 0,
  },
  {
    "children": [],
    "group": "ing",
    "isDirectory": true,
    "lastModifiedTime": "",
    "name": "foo",
    "owner": "test",
    "path": "",
    "permissions": [
      1,
      2,
      3,
    ],
    "size": 0,
  },
]
`;

exports[`walk > should return the correct file tree 1`] = `
[
  {
    "children": undefined,
    "group": "root",
    "isDirectory": false,
    "lastModifiedTime": "",
    "name": "bazzing.gaz",
    "owner": "root",
    "path": "",
    "permissions": [
      6,
      6,
      4,
    ],
    "size": 0,
  },
  {
    "children": [
      {
        "children": undefined,
        "group": "root",
        "isDirectory": false,
        "lastModifiedTime": "",
        "name": ".testing",
        "owner": "root",
        "path": "foo",
        "permissions": [
          6,
          6,
          4,
        ],
        "size": 0,
      },
      {
        "children": [],
        "group": "root",
        "isDirectory": true,
        "lastModifiedTime": "",
        "name": "bar",
        "owner": "root",
        "path": "foo",
        "permissions": [
          6,
          6,
          4,
        ],
        "size": 0,
      },
      {
        "children": undefined,
        "group": "root",
        "isDirectory": false,
        "lastModifiedTime": "",
        "name": "daz",
        "owner": "root",
        "path": "foo",
        "permissions": [
          6,
          6,
          4,
        ],
        "size": 0,
      },
    ],
    "group": "root",
    "isDirectory": true,
    "lastModifiedTime": "",
    "name": "foo",
    "owner": "root",
    "path": "",
    "permissions": [
      6,
      6,
      4,
    ],
    "size": 0,
  },
]
`;
